tests/fixtures/syntax/invalid/file_contains_expected_workspace_path_literal.repor
case "file contains expected text requires a text value, not a workspace path literal" {
  $ true
  assert {
    file <"out.txt"> contains <"expected.txt">
  }
}
